[package]
name = "jspi"
version = "0.0.1"
edition = "2024"
description = "JSPI spill-stack primitives for wasm32-unknown-emscripten"
license = "MIT OR Apache-2.0"
publish = false

[workspace]
members = ["tests-glue"]

[dev-dependencies]
jspi-test-glue = { path = "tests-glue" }

[[test]]
name = "corruption"
harness = false

# [[test]]
# name = "suspend"
# harness = false

# [[test]]
# name = "panics"
# harness = false
